# parSMURF-NG

./: .gitignore  COPYING  readme.MD
samples/: cfg_cv.json  cfg_cv_mt.json  cfg_predict.json  cfg_train.json  data.txt  data_test.txt  label.txt  label_test.txt  logger.conf
samples/savedModels/: 0.out.forest  0.out.importance  1.out.forest  1.out.importance  2.out.forest  2.out.importance  3.out.forest  3.out.importance  description.txt
src/: ArgHandler_new.cpp  ArgHandler_new.h  CMakeLists.txt  Folds.cpp  Folds.h  HyperSMURFUtils.cpp  HyperSMURFUtils.h  MegaCache.cpp  MegaCache.h  curves.cpp  curves.h  data2bin.cpp  datasetGen.cpp  hyperSMURF_core.cpp  hyperSMURF_core.h  optimizer.cpp  optimizer.h  optimizer_sourcepython.h  organizer.cpp  organizer.h  parSMURFUtils.cpp  parSMURFUtils.h  parSMURFng.cpp  rfRanger.cpp  rfRanger.h  runner.cpp  runner.h  runner_finalGather.cpp  runner_finalGather.h  sampler.cpp  sampler.h
src/BOpt/: configEx.json  optimizer.py
src/ann_1.1.2/: CMakeLists.txt
src/easyloggingpp/: CMakeLists.txt  stubFile_instructions.txt
src/ranger/Forest/: Forest.cpp
src/ranger/Utility/: DataDouble.h
src/zlib/: stubFile_instructions.txt
